# AiogramDefault

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
deployments/compose/backend/: Dockerfile  start
src/: bot.py  config.py  main.py
src/dto/: __init__.py  base.py  user.py
src/handlers/: __init__.py
src/handlers/commands/: __init__.py  start.py
src/helpers/: http_clinet.py
src/infrastructure/database/: __init__.py  factory.py
src/infrastructure/database/alembic/: env.py
src/infrastructure/database/alembic/versions/: 045d769b4228_initial_migration.py
src/infrastructure/database/dao/: __init__.py  holder.py
src/infrastructure/database/dao/rdb/: __init__.py  base.py  user.py
src/infrastructure/database/models/: __init__.py  base.py  user.py
src/middlewares/: __init__.py  database.py
